Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-70939

QML ComboBox popup menu doesn't respect scaling

    XMLWordPrintable

Details

    • Linux/X11, macOS, Windows
    • e4a2a999a (dev), 62e265b19 (6.5), a739cf306 (tqtc/lts-6.2)

    Description

      The QML ComboBox popup (dropdown) menu keeps the original ComboBox size, even after applying a scale transformation. The ComboBox visual width and height changes, but the popup menu size keep the same.
      This is causing the user to think the application is broken.

      The sample application source code is attached. Screenshots were taken from the running application.

      Attachments

        1. Clipboard Oct 26, 2022 at 1.44 PM.png
          Clipboard Oct 26, 2022 at 1.44 PM.png
          31 kB
        2. customComboBox_scaleFactor1.0.png
          customComboBox_scaleFactor1.0.png
          12 kB
        3. customComboBox_scaleFactor1.5.png
          customComboBox_scaleFactor1.5.png
          19 kB
        4. defaultComboBox_scaleFactor1.0.png
          defaultComboBox_scaleFactor1.0.png
          11 kB
        5. defaultComboBox_scaleFactor1.5.png
          defaultComboBox_scaleFactor1.5.png
          16 kB
        6. DropDownScalingSampleApp.zip
          4 kB
        7. main_workaround.qml
          1 kB
        8. main.qml
          1 kB
        9. materialComboBox_issue.png
          materialComboBox_issue.png
          24 kB
        10. universalComboBox_issue.png
          universalComboBox_issue.png
          15 kB

        Issue Links

          No reviews matched the request. Check your Options in the drop-down menu of this sections header.

          Activity

            People

              vhilshei Volker Hilsheimer
              rodrigo.pimpao Rodrigo Sessegolo Pimpao
              Votes:
              4 Vote for this issue
              Watchers:
              13 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes