Popup: Document how to scale a popup

Add a code snippet, as Item::transform is not a notifying property
so the Scale item has to be instantiated and bound to separately.

Fixes: QTBUG-70939
Change-Id: Ie0ca672dc65f5a44fa2ac2c3f3ee897a6d663d80
Reviewed-by: Matthias Rauter <matthias.rauter@qt.io>
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>
Reviewed-by: Fabian Kosmale <fabian.kosmale@qt.io>
(cherry picked from commit e4a2a999ae25500d95989921b03985b84712a2f9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>